[tool.poetry]
name = "policy-evaluation"
version = "0.1.0"
description = ""
authors = ["Robin Davenne <robin.davenne@grenoble-inp.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}
ipython = "^8.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
